--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "handlebars": "^4.7.7",
     "mysql2": "^2.2.5",
     "sequelize": "^6.5.0"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
