--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express-session": "^1.17.1",
     "handlebars": "^4.7.7",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.5.0"
+    "sequelize": "^6.5.0",
+    "serve": "^11.3.2"
   },
   "devDependencies": {
     "jest": "^26.6.3"
